k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: backend-app
  labels:
    name: backend-app
