k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: project
  labels:
    app: project
spec:
  replicas: 1
  selector:
    matchLabels:
      app: project
  template:
    metadata:
      labels:
        app: project
    spec:
      containers:
        - name: project-container
          image: 089042446418.dkr.ecr.eu-west-1.amazonaws.com/backend-repo:latest
          ports:
            - containerPort: 8000
