k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: my-web-app-service
spec:
  type: LoadBalancer
  selector: 
    app: my-web-app
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8000
